# geant

./: .clang-format  .gitignore  .gitlab-ci.yml  .mailmap  CMakeLists.txt  CTestConfig.cmake  Doxyfile.in  LICENSE  Makefile  Makefile.cuda  PropagatorGeom.C  PropagatorGeom_3.C  README  cmake_uninstall.cmake.in  doxygen.conf  doxygen.conf.in  geantv-ctest.cmake  geantv_inputFromFile.json  howto_gperftools.md  run.C  runGPU.C  stats.C
GXTracking/GPTracking/: CMakeLists.txt
Nudy/: CMakeLists.txt
Nudy/inc/: LinkDef.h  Particle.h  TNudyAlias.h  TNudyAliasCont.h  TNudyCore.h  TNudyDB.h  TNudyENDF.h  TNudyElementRN.h  TNudyElementTable.h  TNudyEndfAng.h  TNudyEndfCont.h  TNudyEndfDoppler.h  TNudyEndfEnergy.h  TNudyEndfEnergyAng.h  TNudyEndfFile.h  TNudyEndfFissionYield.h  TNudyEndfINTG.h  TNudyEndfList.h  TNudyEndfMat.h  TNudyEndfNuPh.h  TNudyEndfRecoPoint.h  TNudyEndfRecord.h  TNudyEndfSec.h  TNudyEndfSigma.h  TNudyEndfTab1.h  TNudyEndfTab2.h  TNudyEndfTape.h  TNudyLibrary.h  TNudyManager.h  TNudySampling.h  TNudySubLibrary.h  TNudyTypes.h  TVNudyModel.h
Nudy/src/: FGetCONT.f  FGetFloat.f  FGetINTG.f  FGetInt.f  FGetMTF.f  TNudyAlias.cxx  TNudyAliasCont.cxx  TNudyCore.cxx  TNudyDB.cxx  TNudyENDF.cxx  TNudyElementRN.cxx  TNudyElementTable.cxx  TNudyEndfAng.cxx  TNudyEndfCont.cxx  TNudyEndfDoppler.cxx  TNudyEndfEnergy.cxx  TNudyEndfEnergyAng.cxx  TNudyEndfFile.cxx  TNudyEndfFissionYield.cxx  TNudyEndfINTG.cxx  TNudyEndfList.cxx  TNudyEndfMat.cxx  TNudyEndfNuPh.cxx  TNudyEndfRecoPoint.cxx  TNudyEndfRecord.cxx  TNudyEndfSec.cxx  TNudyEndfSigma.cxx  TNudyEndfTab1.cxx  TNudyEndfTab2.cxx  TNudyEndfTape.cxx  TNudyLibrary.cxx  TNudyManager.cxx  TNudySampling.cxx  TNudySubLibrary.cxx  TVNudyModel.cxx  TVNudyModelFile3.cxx
TBBProcessingDemo/: CMakeLists.txt
TBBProcessingDemo/TBBTestModules/: BusyWaitProducer.cpp  CMSApplicationTBB.cpp  CMSApplicationTBB.h  CMSDetectorConstruction.h  CMSParticleGun.h  EventGeneratorProducer.cpp  GeantVProducer.cpp
base/: CMakeLists.txt
base/src/: Error.cxx
cmstrack/: CMakeLists.txt  cms.root  cms2015.root  event.in  load_gdml.cc  lvid.C  scanevent.C
cmstrack/include/: G01DetectorConstruction.hh  G01EventAction.hh  G01Field.hh  G01PrimaryGeneratorAction.hh  G01SteppingAction.hh  VTfileio.h
cmstrack/src/: G01EventAction.cc  G01PrimaryGeneratorAction.cc  G01SteppingAction.cc  VTfileio.cc
core/: CMakeLists.txt
core/base/: CMakeLists.txt
core/concurrency/: CMakeLists.txt
core/cuda/: CMakeLists.txt
core/interfaces/: CMakeLists.txt
core/numa/: CMakeLists.txt
examples/: CMakeLists.txt  hw-hello  hw-hello.c
examples/benchmarks/: CMakeLists.txt  README.md
examples/emVecPhys/: CMakeLists.txt  SauterGavrilaBench.cxx  SauterGavrila_SampleShell_benchmark.cxx
examples/inc/: CMSApplication.h  CMSDetectorConstruction.h  CMSFieldConstruction.h  ExN03Application.h  ExN03DetectorConstruction.h  FastSimApplication.h  LHCbApplication.h  LinkDef.h
examples/mpi/: CMSApp_MPI.cc
examples/physics/: CMakeLists.txt
examples/src/: CMSApplication.cxx  ExN03Application.cxx  FastSimApplication.cxx  LHCbApplication.cxx
examples/tabulated/: CMakeLists.txt
examples/vecphys/: CMakeLists.txt
examplesRP/: CMakeLists.txt
fastsim/: CMakeLists.txt
fastsim/inc/: FastSimProcess.h  Smearer.h  fastsimLinkDef.h
fastsim/src/: FastSimProcess.cxx  Smearer.cxx
geom_vec_tests/: CMakeLists.txt  README
geom_vec_tests/inc/: MaskedVecPerformanceTesterT.h  PFMWatch.h  PerformanceTesterT.h  PerformanceTesterT.hpp  PointStruct.h  RDTSCStopWatch.h  RDTSCTimerOverhead.cxx  TBBStopWatch.h  TBBTimerOverhead.cxx  TGeoBBox_v.h  TGeoCone_v.h  TGeoPcon_v.h  TGeoTube_v.h  USolidPerformanceTesterT.h  Util.h  VecPerformanceTesterT.h
geom_vec_tests/scripts/: GenerateHeaders.py
geom_vec_tests/src/: .gitignore  LinkDef.h  Makefile  TGeoBBox_Test_ComputeNormal.cxx  TGeoBBox_Test_Contains.cxx  TGeoBBox_Test_ContainsAndSafety.cxx  TGeoBBox_Test_ContainsSOA.cxx  TGeoBBox_Test_CouldBeCrossed.cxx  TGeoBBox_Test_CouldBeCrossedSOA.cxx  TGeoBBox_Test_DistFromOutside.cxx  TGeoBBox_Test_DistFromOutsideSOA.cxx  TGeoBBox_Test_DistanceIn.cxx  TGeoBBox_Test_DistanceInSOA.cxx  TGeoBBox_Test_Safety.cxx  TGeoBBox_Test_SafetySOA.cxx  TGeoBBox_v.cxx  TGeoBBox_v.h  TGeoBBox_v_vecext.cxx  TGeoBBox_v_vecext_Vc.cxx  TGeoCone_v.cxx  TGeoPcon_v.cxx  TGeoTube_v.cxx  a.C  doplots.sh  doplots_witherrorbars.sh  doplots_witherrorbars_pslatex.sh  runtests.sh  runtests_multiple.sh  simpvect.cxx  t.cxx  (+4 more)
magneticfield/: CMakeLists.txt  FieldSetup.cc
material/: CMakeLists.txt  materialLinkDef.h
micromc/: CMakeLists.txt
numa/: CMakeLists.txt
physics/: CMakeLists.txt  Doxyfile  physicsLinkDef.h
realphysics/: CMakeLists.txt  realphysicsLinkDef.h
tabxsec/: .gitignore  CMakeLists.txt  GNUmakefile  tabxsec.cc
test-LHCb/: CMakeLists.txt  testLHCb.cc  testLHCb.sh
test-complex/: CMakeLists.txt  testcomplex.cc  testcomplex.sh
test-small/: CMakeLists.txt  exampleN03.cc  test-small.in
testRP/: CMakeLists.txt
userapp/: CMakeLists.txt
vecphys/: CMakeLists.txt  README  Revision-2015-03-17.1830.tar  VecPhysConfig.cmake.in  history  run-vecIter.sh
vecprot/: CMakeLists.txt  Config.mk  Makefile  Makefile.cuda
vecprot_v2/: CMSApp.cc  CMakeLists.txt  Makefile  Par02FullDetector.root  README_TestEm3_GV  README_TestEm5_GV  README_fullCMS  README_fullLHCb  TestEm3_ATLASbar_GV.mac  TestEm3_GV.cc  TestEm3_GV_ATLASbar.mac  TestEm5_GV.cc  TestEm5_GV_hanson19.mac  caloApp.mac  caloAppRP.cc  comparison.C  fullCMS.cc  fullCMS.mac  fullLHCb.mac  hanson19_GV.mac  readHits.C  run.C  runApp.cc  runAppExternalLoop.cc  runAppRP.cc  runAppTestEM3RP.cc  runCMS.C  runCMSGPU.C  runGPU.C  runGPU0.C  runHepMC.C  runLHCb.C  runTestEm5.cc  scalability.C  scalability.sh  testBasketizer.cc  testLocality.cc
vecprot_v2_tbb/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
vectphysproc/: CMakeLists.txt
x-secs/: .gitignore  CMakeLists.txt  exampleB1.cc  plotxsec.C  tabxsec.cc
xsec/: .gitignore  CMakeLists.txt  CMakeLists.txt~  MapTestCuda.cu  testserialRead.cc  testserialReadCuda.cpp  testserialReadCuda.cu
(+4016 files in other folders)
